[FIX] html_editor: make the translated text align to the start
Before this commit: when the translated text is very long, the text is
centered by default, because it's a clickable button.

After this commit: the text is aligned to the start. This is better than
align to the left because it will also adjust to the RTL language when
the direction is set to RTL.

Also added support to display RTL language properly in the translate
dialog. Note that the check of isRTL language is rather naive and uses
a pre-defined set.

task-6234280

--- a/addons/html_editor/static/src/main/translate/translate_plugin.scss
+++ b/addons/html_editor/static/src/main/translate/translate_plugin.scss
@@ -16,6 +16,11 @@
 .o-translator-translated > *:last-child {
     margin-bottom: 0;
 }
+
+button.o-translator-translated {
+    text-align: start;
+}
+
 .o-message-error {
     color: #d44c59;
     font-weight: bold;
